# uav_ros_lib

./: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_constant_acceleration_l_k_f.html  class_constant_acceleration_l_k_f.js  class_constant_acceleration_l_k_f__coll__graph.map  class_constant_acceleration_l_k_f__coll__graph.md5  class_constant_acceleration_u_k_f.html  class_constant_acceleration_u_k_f.js  class_constant_acceleration_u_k_f__inherit__graph.map  class_constant_acceleration_u_k_f__inherit__graph.md5  class_constant_velocity_l_k_f.html  class_constant_velocity_l_k_f.js  class_constant_velocity_l_k_f__coll__graph.md5  class_constant_velocity_l_k_f__inherit__graph.map  class_kalman_filter_vanilla.html  class_kalman_filter_vanilla.js  classes.html  classkf__base.html  classkf__base.js  classros__util_1_1_reconfigure_handler.html  classros__util_1_1_reconfigure_handler.js  classros__util_1_1_topic_handler.html  classros__util_1_1_topic_handler.js  classros__util_1_1_topic_handler_with_function.html  classros__util_1_1_topic_handler_with_function.js  classtf__util_1_1_global_to_local.html  classtf__util_1_1_global_to_local.js  constant__acceleration__lkf_8cpp.html  constant__acceleration__lkf_8cpp__incl.map  constant__acceleration__lkf_8cpp__incl.md5  constant__acceleration__lkf_8hpp.html  constant__acceleration__lkf_8hpp__dep__incl.map  constant__acceleration__lkf_8hpp__dep__incl.md5  constant__acceleration__lkf_8hpp__incl.map  (+163 more)
.ci/: generate_docs.sh
.github/workflows/: documentation.yml  melodic.yml  noetic.yml
cfg/: ConstantAccelerationLKFParameters.cfg  ConstantAccelerationUKFParameters.cfg  ConstantVelocityLKFParameters.cfg
include/uav_ros_lib/: global_to_local.hpp  nonlinear_filters.hpp  param_util.hpp  reconfigure_handler.hpp  ros_convert.hpp  ros_util.hpp  topic_handler.hpp
include/uav_ros_lib/estimation/: constant_acceleration_lkf.hpp  constant_acceleration_ukf.hpp  constant_velocity_lkf.hpp  kalman_filter_vanilla.hpp  kf_base.h
include/uav_ros_lib/trajectory/: trajectory_helper.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  (+34 more)
src/: constant_acceleration_lkf.cpp  constant_acceleration_ukf.cpp  constant_velocity_lkf.cpp  global_to_local.cpp  kalman_filter_vanilla.cpp  nonlinear_filters.cpp  param_util.cpp  ros_convert.cpp  trajectory_helper.cpp
