<?xml version="1.0"?>
<package>
  <name>uav_ros_lib</name>
  <version>0.0.0</version>
  <description>A collection of useful libraries for the "uav_ros_stack" package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lovro.markovic@fer.hr">Lovro Markovic</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uav_ros_msgs</build_depend>
  <build_depend>geographiclib</build_depend>
  <build_depend>geographiclib-tools</build_depend>
  <build_depend>mavros</build_depend>

  <run_depend>geographiclib</run_depend>
  <run_depend>geographiclib-tools</run_depend>
  <run_depend>uav_ros_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>Eigen3</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
